--- a/examples/EchoExample/EchoExample_1_FederatesExporter/java-federates/pom.xml
+++ b/examples/EchoExample/EchoExample_1_FederatesExporter/java-federates/pom.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>org.c2w.example</groupId>
+    <groupId>org.c2w.examples</groupId>
     <artifactId>EchoExample_root</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
+
   <artifactId>EchoExample-java</artifactId>
   <packaging>pom</packaging>
+
   <modules>
     <module>EchoExample-base-java</module>
     <module>EchoExample-rti-java</module>
   </modules>
+
   <dependencies>
     <dependency>
       <groupId>org.porticoproject</groupId>
