--- a/examples/HelloWorld/HelloWorld_Java_Tutorial_2_Implementation/HelloWorld_Java_Tutorial-impl-java/pom.xml
+++ b/examples/HelloWorld/HelloWorld_Java_Tutorial_2_Implementation/HelloWorld_Java_Tutorial-impl-java/pom.xml
@@ -29,29 +29,29 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <repositories>
-    <repository>
-      <id>archiva.internal</id>
-      <name>Internal Release Repository</name>
-      <url>http://cpswtng_archiva:8080/repository/internal/</url>
-    </repository>
-    <repository>
-      <id>archiva.snapshots</id>
-      <name>Internal Snapshot Repository</name>
-      <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
-    </repository>
-  </repositories>
-  <distributionManagement>
-    <repository>
-      <id>archiva.internal</id>
-      <name>Internal Release Repository</name>
-      <url>http://cpswtng_archiva:8080/repository/internal/</url>
-    </repository>
-    <snapshotRepository>
-      <id>archiva.snapshots</id>
-      <name>Internal Snapshot Repository</name>
-      <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
+  <!--<repositories>-->
+    <!--<repository>-->
+      <!--<id>archiva.internal</id>-->
+      <!--<name>Internal Release Repository</name>-->
+      <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
+    <!--</repository>-->
+    <!--<repository>-->
+      <!--<id>archiva.snapshots</id>-->
+      <!--<name>Internal Snapshot Repository</name>-->
+      <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
+    <!--</repository>-->
+  <!--</repositories>-->
+  <!--<distributionManagement>-->
+    <!--<repository>-->
+      <!--<id>archiva.internal</id>-->
+      <!--<name>Internal Release Repository</name>-->
+      <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
+    <!--</repository>-->
+    <!--<snapshotRepository>-->
+      <!--<id>archiva.snapshots</id>-->
+      <!--<name>Internal Snapshot Repository</name>-->
+      <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
+    <!--</snapshotRepository>-->
+  <!--</distributionManagement>-->
 </project>
 
