--- a/examples/EchoExample/EchoExample_1_FederatesExporter/java-federates/EchoExample-base-java/pom.xml
+++ b/examples/EchoExample/EchoExample_1_FederatesExporter/java-federates/EchoExample-base-java/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.c2wt.examples</groupId>
+  <groupId>org.c2w.examples</groupId>
   <artifactId>EchoExample-base-java</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
