--- a/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
+++ b/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
@@ -23,7 +23,7 @@
 		
 		<dependency><!-- The depenency for the user written code-->
 			<groupId>org.c2w.examples</groupId>
-			<artifactId>EchoExample</artifactId>
+			<artifactId>EchoExample-impl-java</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		
