--- a/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
+++ b/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
@@ -202,170 +202,47 @@
                 <federate.loglevel>NORMAL</federate.loglevel>
             </properties>
         </profile>
-        <profile>
-        	<id>FedManager</id>
-        	<dependencies>
-				<dependency>
-					<groupId>org.c2w</groupId>
-					<artifactId>c2w-gui</artifactId>
-					<version>${c2w.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.porticoproject</groupId>
-					<artifactId>portico</artifactId>
-					<version>2.1.0</version>
-				</dependency>
-			</dependencies>	
-        	<build>
-	        	<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.4.0</version>
-						<configuration>
-							<executable>java</executable>
-							<arguments>
-								<argument>-Xmx512m</argument>
-								<!-- For debugging purposes-->
-								<!--argument>-Xdiag</argument-->
-					            <argument>-Djava.library.path=${project.basedir}/target/nar/processid-${c2w.version}-${nar.aol}-jni/lib/${nar.aol}/jni/</argument>
-					            <argument>-Djava.net.preferIPv4Stack=true</argument>
-					            <argument>-classpath</argument>
-					            <!-- automatically creates the classpath using all project dependencies,
-		                 		also adding the project build directory -->
-					            <classpath/>
-					            <argument>c2w.gui.hla.main.C2WSim</argument>
-					            <argument>--step</argument><argument>1.0</argument>
-					            <argument>--lookahead</argument><argument>0.1</argument>
-					            <argument>--realtime</argument>
-					            <argument>--federationEndTime</argument><argument>20.0</argument>
-					            <argument>--seed4DurRNG</argument><argument>0</argument>
-					            <argument>--autoStart</argument>
-					            <argument>--lockfile</argument><argument>${env.C2WTROOT}/__lock__</argument>
-					            <argument>HelloWorld</argument>
-					            <argument>${project.basedir}/target/classes/EchoExample.fed</argument>
-					            <argument>${project.basedir}/target/classes/default/script.xml</argument>
-					            <argument>HelloWorld_main-Deployment1_100</argument>
-					            <argument>NORMAL</argument>
-					    	</arguments>
-						    <environmentVariables>
-			                    <EXEDIR>${env.C2WTROOT}</EXEDIR>
-			                </environmentVariables>
-						</configuration>
-					</plugin>
-				</plugins>	
-			</build>	
-        </profile>
+
 		<profile>
-			<id>JavaFed</id>
+			<id>ExecJava</id>
+			<properties>
+				<federate.loglevel>NORMAL</federate.loglevel>
+			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>org.porticoproject</groupId>
 					<artifactId>portico</artifactId>
 					<version>2.1.0</version>
 				</dependency>
-			</dependencies>	
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.4.0</version>
+						<version>1.5.0</version>
+						<goals>
+							<goal>java</goal>
+						</goals>
 						<configuration>
-							<executable>java</executable>
+							<systemProperties>
+								<systemProperty>
+									<key>java.net.preferIPv4Stack</key>
+									<value>true</value>
+								</systemProperty>
+							</systemProperties>
+
+							<classpathScope>runtime</classpathScope>
+							<mainClass>${federation.name}.${federate.name}</mainClass>
+
 							<arguments>
-								<argument>-Xmx512m</argument>
-								<!-- For debugging purposes-->
-								<!--argument>-Xdiag</argument-->
-					            <argument>-Djava.library.path=${project.basedir}/target/nar/processid-${c2w.version}-${nar.aol}-jni/lib/${nar.aol}/jni/</argument>
-					            <argument>-Djava.net.preferIPv4Stack=true</argument>
-					            <argument>-classpath</argument>
-					            <!-- automatically creates the classpath using all project dependencies,
-		                 		also adding the project build directory -->
-					            <classpath/>
-					            <argument>${federation.name}.${federate.name}</argument>
-					            <argument>${federation.name}</argument>
-					            <argument>${federate.name}</argument>
-					            <argument>${federate.loglevel}</argument>
-					    	</arguments>
-						    <environmentVariables>
-			                    <EXEDIR>${project.basedir}/target/${federate.name}</EXEDIR>
-			                </environmentVariables>
+								<argument>${federation.name}</argument>
+								<argument>${federate.name}</argument>
+								<argument>${federate.loglevel}</argument>
+							</arguments>
 						</configuration>
 					</plugin>
 				</plugins>
-			</build>	
-		</profile>
-		<profile>
-			<id>CppFed</id>
-			<build>
-				<plugins>
-			        <plugin>
-				        <groupId>com.github.maven-nar</groupId>
-				        <artifactId>nar-maven-plugin</artifactId>
-				        <version>${nar.version}</version>
-				        <configuration>
-				          <classifiers>
-				            <classifier>${nar.aol}</classifier>
-				          </classifiers>
-				        </configuration>
-				        <executions>
-				          <execution>
-				            <goals>
-				              <goal>nar-download</goal>
-				              <goal>nar-download-dependencies</goal>
-				              <goal>nar-unpack</goal>
-				              <goal>nar-unpack-dependencies</goal>
-				              <goal>nar-assembly</goal>
-				            </goals>
-				          </execution>
-				        </executions>
-			      	</plugin>
-			        <plugin>
-			          <artifactId>maven-assembly-plugin</artifactId>
-			          <version>2.6</version>
-			          <dependencies>
-			          	<dependency><!-- The depenency for CPP execution assembly script-->
-							<groupId>org.c2w</groupId>
-							<artifactId>ExecutionAssembler</artifactId>
-							<version>${c2w.version}</version>
-						</dependency>
-					  </dependencies>
-			          <configuration>
-			            <finalName>bin</finalName>
-			            <descriptorRefs>
-			              <descriptorRef>executionAssembly</descriptorRef>
-			            </descriptorRefs>
-			          </configuration>
-			          <executions>
-			              <execution>
-			                <id>make-assembly</id> <!-- this is used for inheritance merges -->
-			                <phase>package</phase> <!-- bind to the packaging phase -->
-			                <goals>
-			                  <goal>single</goal>
-			                </goals>
-			              </execution>
-			        </executions>
-			        </plugin>
-			        <plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.4.0</version>
-						<configuration>
-							<workingDirectory>${project.basedir}/target/bin-exec</workingDirectory>
-              				<executable>./EchoExample-${federate.name}-cpp</executable>
-							<arguments>
-								<argument>${federation.name}</argument>
-					            <argument>${federate.name}</argument>
-					            <argument>${federate.loglevel}</argument>
-					    	</arguments>
-					    	<environmentVariables>
-			                    <EXEDIR>${project.basedir}/target/${federate.name}</EXEDIR>
-			                    <LD_LIBRARY_PATH>${project.basedir}/target/nar/lib/${nar.aol}/shared/:${env.RTI_HOME}/lib/gcc4/:${env.RTI_HOME}/jre/lib/amd64/server</LD_LIBRARY_PATH>
-			                </environmentVariables>
-						</configuration>
-					</plugin>
-			    </plugins>
 			</build>
 		</profile>
     </profiles>
