--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -132,31 +132,31 @@
         </plugins>
     </build>
 
-    <!--<repositories>-->
-        <!--<repository>-->
-            <!--<id>archiva.internal</id>-->
-            <!--<name>Internal Release Repository</name>-->
-            <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
-        <!--</repository>-->
-        <!--<repository>-->
-            <!--<id>archiva.snapshots</id>-->
-            <!--<name>Internal Snapshot Repository</name>-->
-            <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
-        <!--</repository>-->
-    <!--</repositories>-->
+    <repositories>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <url>http://cpswtng_archiva:8080/repository/internal/</url>
+        </repository>
+        <repository>
+            <id>archiva.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+        </repository>
+    </repositories>
 
-    <!--<distributionManagement>-->
-        <!--<repository>-->
-            <!--<id>archiva.internal</id>-->
-            <!--<name>Internal Release Repository</name>-->
-            <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
-        <!--</repository>-->
-        <!--<snapshotRepository>-->
-            <!--<id>archiva.snapshots</id>-->
-            <!--<name>Internal Snapshot Repository</name>-->
-            <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
-        <!--</snapshotRepository>-->
-    <!--</distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <url>http://cpswtng_archiva:8080/repository/internal/</url>
+        </repository>
+        <snapshotRepository>
+            <id>archiva.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <!--<scm>-->
         <!--<connection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java</connection>-->
