--- a/examples/EchoExample/EchoExample_1_FederatesExporter/pom.xml
+++ b/examples/EchoExample/EchoExample_1_FederatesExporter/pom.xml
@@ -8,28 +8,28 @@
   <modules>
     <module>java-federates</module>
   </modules>
-  <!--<repositories>-->
-    <!--<repository>-->
-      <!--<id>archiva.internal</id>-->
-      <!--<name>Internal Release Repository</name>-->
-      <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
-    <!--</repository>-->
-    <!--<repository>-->
-      <!--<id>archiva.snapshots</id>-->
-      <!--<name>Internal Snapshot Repository</name>-->
-      <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
-    <!--</repository>-->
-  <!--</repositories>-->
-  <!--<distributionManagement>-->
-    <!--<repository>-->
-      <!--<id>archiva.internal</id>-->
-      <!--<name>Internal Release Repository</name>-->
-      <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
-    <!--</repository>-->
-    <!--<snapshotRepository>-->
-      <!--<id>archiva.snapshots</id>-->
-      <!--<name>Internal Snapshot Repository</name>-->
-      <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
-    <!--</snapshotRepository>-->
-  <!--</distributionManagement>-->
+  <repositories>
+    <repository>
+      <id>archiva.internal</id>
+      <name>Internal Release Repository</name>
+      <url>http://cpswtng_archiva:8080/repository/internal/</url>
+    </repository>
+    <repository>
+      <id>archiva.snapshots</id>
+      <name>Internal Snapshot Repository</name>
+      <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+    </repository>
+  </repositories>
+  <distributionManagement>
+    <repository>
+      <id>archiva.internal</id>
+      <name>Internal Release Repository</name>
+      <url>http://cpswtng_archiva:8080/repository/internal/</url>
+    </repository>
+    <snapshotRepository>
+      <id>archiva.snapshots</id>
+      <name>Internal Snapshot Repository</name>
+      <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
