--- a/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
+++ b/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
@@ -148,44 +148,44 @@
 	</build>
 
 	
-	<!--<repositories>-->
-		<!--<repository>-->
-			<!--<id>archiva.internal</id>-->
-			<!--<name>Internal Release Repository</name>-->
-			<!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
-		<!--</repository>-->
-		<!--<repository>-->
-			<!--<id>archiva.snapshots</id>-->
-			<!--<name>Internal Snapshot Repository</name>-->
-			<!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
-		<!--</repository>-->
-	<!--</repositories>-->
+	<repositories>
+		<repository>
+			<id>archiva.internal</id>
+			<name>Internal Release Repository</name>
+			<url>http://cpswtng_archiva:8080/repository/internal/</url>
+		</repository>
+		<repository>
+			<id>archiva.snapshots</id>
+			<name>Internal Snapshot Repository</name>
+			<url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+		</repository>
+	</repositories>
 
-	<!--<pluginRepositories>-->
-		<!--<pluginRepository>-->
-			<!--<id>archiva.internal</id>-->
-			<!--<name>Internal Release Repository</name>-->
-			<!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
-		<!--</pluginRepository>-->
-		<!--<pluginRepository>-->
-			<!--<id>archiva.snapshots</id>-->
-			<!--<name>Internal Snapshot Repository</name>-->
-			<!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
-		<!--</pluginRepository>-->
-	<!--</pluginRepositories>-->
+	<pluginRepositories>
+		<pluginRepository>
+			<id>archiva.internal</id>
+			<name>Internal Release Repository</name>
+			<url>http://cpswtng_archiva:8080/repository/internal/</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>archiva.snapshots</id>
+			<name>Internal Snapshot Repository</name>
+			<url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+		</pluginRepository>
+	</pluginRepositories>
 
-	<!--<distributionManagement>-->
-		<!--<repository>-->
-			<!--<id>archiva.internal</id>-->
-			<!--<name>Internal Release Repository</name>-->
-			<!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
-		<!--</repository>-->
-		<!--<snapshotRepository>-->
-			<!--<id>archiva.snapshots</id>-->
-			<!--<name>Internal Snapshot Repository</name>-->
-			<!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
-		<!--</snapshotRepository>-->
-	<!--</distributionManagement>-->
+	<distributionManagement>
+		<repository>
+			<id>archiva.internal</id>
+			<name>Internal Release Repository</name>
+			<url>http://cpswtng_archiva:8080/repository/internal/</url>
+		</repository>
+		<snapshotRepository>
+			<id>archiva.snapshots</id>
+			<name>Internal Snapshot Repository</name>
+			<url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 	
 	<profiles>
         <profile>
