--- a/testfiles/pom.xml
+++ b/testfiles/pom.xml
@@ -33,111 +33,6 @@
 
     <profiles>
         <profile>
-            <id>fedhost-execjava-clargs</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.5.0</version>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>c2w.host.FederationManagerConsoleHost</mainClass>
-                            <classpathScope>runtime</classpathScope>
-
-                            <systemProperties>
-                                <systemProperty>
-                                    <key>java.net.preferIPv4Stack</key>
-                                    <value>true</value>
-                                </systemProperty>
-                                <systemProperty>
-                                    <key>log4j.configuration</key>
-                                    <value>file:log4j.properties</value>
-                                </systemProperty>
-                            </systemProperties>
-
-                            <arguments>
-                                <argument>--step</argument>
-                                <argument>1.0</argument>
-                                <argument>--lookahead</argument>
-                                <argument>0.1</argument>
-                                <argument>--lockfile</argument>
-                                <argument>${env.C2WTROOT}/__lock__</argument>
-                                <argument>--realtime</argument>
-                                <argument>--federationEndTime</argument>
-                                <argument>20.0</argument>
-                                <argument>--seed4DurRNG</argument>
-                                <argument>0</argument>
-                                <argument>--autoStart</argument>
-                                <argument>--fomFilename</argument>
-                                <argument>${env.C2WTROOT}/HelloWorld.fed</argument>
-                                <argument>--scriptFilename</argument>
-                                <argument>${env.C2WTROOT}/script.xml</argument>
-                                <argument>--logLevel</argument>
-                                <argument>NORMAL</argument>
-                                <argument>--federationName</argument>
-                                <argument>HelloWorld</argument>
-                            </arguments>
-
-                            <!--
-                            this doesn't work in the exec:java case
-                            <environmentVariables>
-                                <C2WTROOT>${project.build.directory}</C2WTROOT>
-                            </environmentVariables>
-                            -->
-
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>fedhost-execjava-inputfile</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.5.0</version>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>c2w.host.FederationManagerConsoleHost</mainClass>
-                            <classpathScope>runtime</classpathScope>
-
-                            <systemProperties>
-                                <systemProperty>
-                                    <key>java.net.preferIPv4Stack</key>
-                                    <value>true</value>
-                                </systemProperty>
-                                <systemProperty>
-                                    <key>log4j.configuration</key>
-                                    <value>file:resources/log4j.properties</value>
-                                </systemProperty>
-                            </systemProperties>
-
-                            <arguments>
-                                <argument>config.properties</argument>
-                            </arguments>
-
-                            <!--
-                           this doesn't work in the exec:java case
-                           <environmentVariables>
-                               <C2WTROOT>${project.build.directory}</C2WTROOT>
-                           </environmentVariables>
-                           -->
-
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
             <id>FederationManagerExecJava</id>
             <build>
                 <plugins>
@@ -170,33 +65,92 @@
             </build>
         </profile>
 
+
+        <profile>
+            <id>EchoClient</id>
+            <properties>
+                <federate.name>EchoClient</federate.name>
+                <federate.loglevel>NORMAL</federate.loglevel>
+            </properties>
+        </profile>
+        <profile>
+            <id>EchoServer</id>
+            <properties>
+                <federate.name>EchoServer</federate.name>
+                <federate.loglevel>NORMAL</federate.loglevel>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>ExecJava</id>
+            <properties>
+                <federate.loglevel>NORMAL</federate.loglevel>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.porticoproject</groupId>
+                    <artifactId>portico</artifactId>
+                    <version>2.1.0</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>java.net.preferIPv4Stack</key>
+                                    <value>true</value>
+                                </systemProperty>
+                            </systemProperties>
+
+                            <classpathScope>runtime</classpathScope>
+                            <mainClass>${federation.name}.${federate.name}</mainClass>
+
+                            <arguments>
+                                <argument>${federation.name}</argument>
+                                <argument>${federate.name}</argument>
+                                <argument>${federate.loglevel}</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 
 
-    <!--<repositories>-->
-        <!--<repository>-->
-            <!--<id>archiva.internal</id>-->
-            <!--<name>Internal Release Repository</name>-->
-            <!--<url>${maven.repository.url}/internal/</url>-->
-        <!--</repository>-->
-        <!--<repository>-->
-            <!--<id>archiva.snapshots</id>-->
-            <!--<name>Internal Snapshot Repository</name>-->
-            <!--<url>${maven.repository.url}/snapshots/</url>-->
-        <!--</repository>-->
-    <!--</repositories>-->
+    <repositories>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <url>${maven.repository.url}/internal/</url>
+        </repository>
+        <repository>
+            <id>archiva.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <url>${maven.repository.url}/snapshots/</url>
+        </repository>
+    </repositories>
 
-    <!--<distributionManagement>-->
-        <!--<repository>-->
-            <!--<id>archiva.internal</id>-->
-            <!--<name>Internal Release Repository</name>-->
-            <!--<url>${maven.repository.url}/internal/</url>-->
-        <!--</repository>-->
-        <!--<snapshotRepository>-->
-            <!--<id>archiva.snapshots</id>-->
-            <!--<name>Internal Snapshot Repository</name>-->
-            <!--<url>${maven.repository.url}/snapshots/</url>-->
-        <!--</snapshotRepository>-->
-    <!--</distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <url>${maven.repository.url}/internal/</url>
+        </repository>
+        <snapshotRepository>
+            <id>archiva.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <url>${maven.repository.url}/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
