--- a/testfiles/pom.xml
+++ b/testfiles/pom.xml
@@ -1,21 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.c2w</groupId>
-        <artifactId>c2w-foundation</artifactId>
-        <relativePath>../c2w-foundation/pom.xml</relativePath>
-        <version>0.5.0-SNAPSHOT</version>
-    </parent>
 
-    <artifactId>fedmanager-exec</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <groupId>org.c2w</groupId>
+    <artifactId>C2WT_TEST_EXECUTION</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <properties>
-        <nar.version>3.3.0</nar.version>
-        <env.C2WTROOT>/root/c2wt</env.C2WTROOT>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -69,6 +60,7 @@
         <profile>
             <id>EchoClient</id>
             <properties>
+                <federation.name>EchoExample</federation.name>
                 <federate.name>EchoClient</federate.name>
                 <federate.loglevel>NORMAL</federate.loglevel>
             </properties>
@@ -76,6 +68,7 @@
         <profile>
             <id>EchoServer</id>
             <properties>
+                <federation.name>EchoExample</federation.name>
                 <federate.name>EchoServer</federate.name>
                 <federate.loglevel>NORMAL</federate.loglevel>
             </properties>
