--- a/examples/EchoExample/EchoExample_1_FederatesExporter/java-federates/EchoExample-rti-java/pom.xml
+++ b/examples/EchoExample/EchoExample_1_FederatesExporter/java-federates/EchoExample-rti-java/pom.xml
@@ -18,5 +18,17 @@
       <artifactId>base-events</artifactId>
       <version>0.5.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.8.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.8.2</version>
+    </dependency>
+
   </dependencies>
 </project>
