log4j config; EchoExample working (still not perfect) #9

--- a/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
+++ b/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
@@ -230,6 +230,14 @@
 									<key>java.net.preferIPv4Stack</key>
 									<value>true</value>
 								</systemProperty>
+								<systemProperty>
+									<key>org.apache.logging.log4j.simplelog.StatusLogger.level</key>
+									<value>TRACE</value>
+								</systemProperty>
+								<systemProperty>
+									<key>log4j.configurationFile</key>
+									<value>./log4j2.xml</value>
+								</systemProperty>
 							</systemProperties>
 
 							<classpathScope>runtime</classpathScope>
