Added federate parameter object; SynchronizedFederate ctor changed; FederateIdGenerator created; #8  #3 #1
breaks the basic examples - those need to be fixed

--- a/c2w-foundation/federate-base/src/main/resources/federateConfig.default.json
+++ b/c2w-foundation/federate-base/src/main/resources/federateConfig.default.json
@@ -1,10 +1,8 @@
 {
-  "federateName": "DefaultFederateName",
   "federateRTIInitWaitTimeMs": 200,
-  "federationEndTime": 40.0,
-  "federationName": "DefaultFederationName",
-  "lateJoiner": false,
+  "federateType": "DefaultFederateType",
+  "federationId": "DefaultFederationId",
+  "isLateJoiner": false,
   "lookAhead": 0.1,
-  "realTime": true,
   "stepSize": 1.0
 }
