--- a/c2w-foundation/federate-base/pom.xml
+++ b/c2w-foundation/federate-base/pom.xml
@@ -11,6 +11,14 @@
     <artifactId>federate-base</artifactId>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}</directory>
+                <includes>
+                    <include>federateConfig.default.json</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>com.github.maven-nar</groupId>
@@ -50,6 +58,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.7.8</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
