--- a/c2w-foundation/fedmanager-host/pom.xml
+++ b/c2w-foundation/fedmanager-host/pom.xml
@@ -12,6 +12,16 @@
 
     <artifactId>fedmanager-host</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.4.RELEASE</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.c2w</groupId>
