--- a/c2w-foundation/fedmanager-host/pom.xml
+++ b/c2w-foundation/fedmanager-host/pom.xml
@@ -41,7 +41,11 @@
             <artifactId>akka-http_2.11</artifactId>
             <version>10.0.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http-jackson_2.11</artifactId>
+            <version>10.0.7</version>
+        </dependency>
 
 
         <dependency>
