--- a/testfiles/pom.xml
+++ b/testfiles/pom.xml
@@ -61,6 +61,45 @@
             </build>
         </profile>
 
+        <profile>
+            <id>FederationManagerExecJavaAKKA</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>c2w.host.akkahttp.FederationManagerHostApp</mainClass>
+                            <classpathScope>runtime</classpathScope>
+
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>java.net.preferIPv4Stack</key>
+                                    <value>true</value>
+                                </systemProperty>
+                                <systemProperty>
+                                    <key>org.apache.logging.log4j.simplelog.StatusLogger.level</key>
+                                    <value>TRACE</value>
+                                </systemProperty>
+                                <systemProperty>
+                                    <key>log4j.configurationFile</key>
+                                    <value>./log4j2.xml</value>
+                                </systemProperty>
+                            </systemProperties>
+
+                            <arguments>
+                                <argument>fedmgrconfig.yml</argument>
+                            </arguments>
+
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 
         <profile>
             <id>EchoClient</id>
