--- a/c2w-foundation/federate-base/pom.xml
+++ b/c2w-foundation/federate-base/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>utils</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
 
     </dependencies>
 
