Extensibe Federate config done; fixes #16; hosting endpoints changed from /api/fedmgr to /fedmgr

--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -209,7 +209,8 @@
                             </systemProperties>
 
                             <arguments>
-                                <argument>fedmgrconfig.yml</argument>
+                                <argument>-configFile</argument>
+                                <argument>fedmgrconfig.json</argument>
                             </arguments>
 
                         </configuration>
