--- a/testfiles/pom.xml
+++ b/testfiles/pom.xml
@@ -73,7 +73,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>c2w.host.akkahttp.FederationManagerHostApp</mainClass>
+                            <mainClass>c2w.host.FederationManagerHostApp</mainClass>
                             <classpathScope>runtime</classpathScope>
 
                             <systemProperties>
@@ -92,7 +92,12 @@
                             </systemProperties>
 
                             <arguments>
-                                <argument>fedmgrconfig.yml</argument>
+                                <argument>-configFile</argument>
+                                <argument>fedmgrconfig.json</argument>
+                                <argument>-stepSize</argument>
+                                <argument>2.0</argument>
+                                <argument>-federationEndTime</argument>
+                                <argument>10.0</argument>
                             </arguments>
 
                         </configuration>
