akka-http hosting finished: fixes #23; dropwizard hosting removed: fixes #24

--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -190,7 +190,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>c2w.host.akkahttp.FederationManagerHostApp</mainClass>
+                            <mainClass>c2w.host.FederationManagerHostApp</mainClass>
                             <classpathScope>runtime</classpathScope>
 
                             <systemProperties>
