experimentConfig prep #22; general refactoring #8; fedTypes #19

--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -61,7 +61,7 @@
                             <arguments>
                                 <argument>--step</argument>
                                 <argument>1.0</argument>
-                                <argument>--lookahead</argument>
+                                <argument>--lookAhead</argument>
                                 <argument>0.1</argument>
                                 <argument>--lockfile</argument>
                                 <argument>${env.C2WTROOT}/__lock__</argument>
