--- a/testfiles/fedmgrconfig.json
+++ b/testfiles/fedmgrconfig.json
@@ -16,6 +16,6 @@
   "realTimeMode": true,
   "terminateOnCOAFinish": false,
   "fedFile": "EchoExample.fed",
-  "experimentConfig": "script.xml"
+  "experimentConfig": "experimentConfig.json"
 
 }
