--- a/c2w-foundation/federate-base/pom.xml
+++ b/c2w-foundation/federate-base/pom.xml
@@ -45,26 +45,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.7.8</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>utils</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.5</version>
+            <groupId>org.c2w</groupId>
+            <artifactId>config</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
