--- a/c2w-foundation/federation-manager/pom.xml
+++ b/c2w-foundation/federation-manager/pom.xml
@@ -22,9 +22,9 @@
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.3.1</version>
+            <groupId>org.c2w</groupId>
+            <artifactId>config</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
