--- a/testfiles/experimentConfig.json
+++ b/testfiles/experimentConfig.json
@@ -7,7 +7,11 @@
   "expectedFederates": [
     {
       "federateType": "EchoServer",
-      "count": 0
+      "count": 1
+    },
+    {
+      "federateType": "EchoClient",
+      "count": 1
     }
   ],
 
