updated HelloWorld example to support cpswtng-core @latejoiners #35

--- a/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
+++ b/examples/EchoExample/EchoExample_3_DeploymentExporter/pom.xml
@@ -251,11 +251,8 @@
 							<mainClass>${federation.name}.${federate.name}</mainClass>
 
 							<arguments>
-								<argument>--configFile</argument>
+								<argument>-configFile</argument>
 								<argument>${federate.configFile}</argument>
-								<!--<argument>${federation.name}</argument>-->
-								<!--<argument>${federate.name}</argument>-->
-								<!--<argument>${federate.loglevel}</argument>-->
 							</arguments>
 						</configuration>
 					</plugin>
