--- a/examples/HelloWorld/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
+++ b/examples/HelloWorld/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
@@ -15,19 +15,17 @@
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.c2wt.example</groupId>
-            <artifactId>HelloWorld_Java_Tutorial-base-java</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
-        </dependency>
-
         <dependency>
             <groupId>org.c2wt.example</groupId>
             <artifactId>HelloWorld_Java_Tutorial-impl-java</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.c2w</groupId>
+            <artifactId>fedmanager-host</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
@@ -40,10 +38,7 @@
     <build>
         <resources>
             <resource>
-                <directory>src/fom</directory>
-            </resource>
-            <resource>
-                <directory>src/experiments</directory>
+                <directory>fom</directory>
             </resource>
         </resources>
         <plugins>
@@ -122,7 +117,6 @@
                                 <mkdir dir="${project.basedir}/target/Sink"/>
                                 <mkdir dir="${project.basedir}/target/Source"/>
                                 <mkdir dir="${project.basedir}/target/PingCounter"/>
-                                <mkdir dir="${project.basedir}/target/FedManager"/>
                             </tasks>
                         </configuration>
                         <goals>
@@ -165,7 +159,7 @@
             <id>Sink</id>
             <properties>
                 <federate.name>Sink</federate.name>
-                <federate.loglevel>NORMAL</federate.loglevel>
+                <federate.configFile>conf/sink.json</federate.configFile>
             </properties>
         </profile>
 
@@ -174,6 +168,7 @@
             <id>Source</id>
             <properties>
                 <federate.name>Source</federate.name>
+                <federate.configFile>conf/source.json</federate.configFile>
             </properties>
         </profile>
 
@@ -181,6 +176,7 @@
             <id>PingCounter</id>
             <properties>
                 <federate.name>PingCounter</federate.name>
+                <federate.configFile>conf/pingcounter.json</federate.configFile>
             </properties>
         </profile>
 
@@ -210,9 +206,8 @@
                                 <argument>-classpath</argument>
                                 <classpath/>
                                 <argument>${federation.name}.${federate.name}</argument>
-                                <argument>${federation.name}</argument>
-                                <argument>${federate.name}</argument>
-                                <argument>${federate.loglevel}</argument>
+                                <argument>-configFile</argument>
+                                <argument>${federate.configFile}</argument>
                             </arguments>
                             <environmentVariables>
                                 <EXEDIR>${project.basedir}/target/${federate.name}</EXEDIR>
@@ -250,16 +245,63 @@
                                     <key>java.net.preferIPv4Stack</key>
                                     <value>true</value>
                                 </systemProperty>
+                                <systemProperty>
+                                    <key>log4j.configurationFile</key>
+                                    <value>conf/log4j2.xml</value>
+                                </systemProperty>
                             </systemProperties>
 
                             <classpathScope>runtime</classpathScope>
                             <mainClass>${federation.name}.${federate.name}</mainClass>
 
                             <arguments>
-                                <argument>${federation.name}</argument>
-                                <argument>${federate.name}</argument>
-                                <argument>${federate.loglevel}</argument>
+                                <argument>-configFile</argument>
+                                <argument>${federate.configFile}</argument>
                             </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>FederationManagerExecJava</id>
+            <properties>
+                <configFile>conf/fedmgrconfig.json</configFile>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>c2w.host.FederationManagerHostApp</mainClass>
+                            <classpathScope>runtime</classpathScope>
+
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>java.net.preferIPv4Stack</key>
+                                    <value>true</value>
+                                </systemProperty>
+                                <systemProperty>
+                                    <key>log4j.configurationFile</key>
+                                    <value>conf/log4j2.xml</value>
+                                </systemProperty>
+                            </systemProperties>
+
+                            <arguments>
+                                <argument>-configFile</argument>
+                                <argument>${configFile}</argument>
+                                <argument>-stepSize</argument>
+                                <argument>1.0</argument>
+                                <argument>-federationEndTime</argument>
+                                <argument>0</argument>
+                            </arguments>
+
                         </configuration>
                     </plugin>
                 </plugins>
