all examples are running; some pom.xml restructures done; #9, #8

--- a/examples/HelloWorld/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
+++ b/examples/HelloWorld/HelloWorld_Java_Tutorial_3_DeploymentExporter/pom.xml
@@ -279,7 +279,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>FederationManagerHostApp</mainClass>
+                            <mainClass>org.cpswt.host.FederationManagerHostApp</mainClass>
                             <classpathScope>runtime</classpathScope>
 
                             <systemProperties>
