--- a/cpswt-core/federate-base/pom.xml
+++ b/cpswt-core/federate-base/pom.xml
@@ -10,6 +10,27 @@
 
     <artifactId>federate-base</artifactId>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.cpswt</groupId>
+            <artifactId>base-events</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.cpswt</groupId>
+            <artifactId>config</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.cpswt</groupId>-->
+            <!--<artifactId>utils</artifactId>-->
+            <!--<version>0.5.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+    </dependencies>
+
     <build>
         <resources>
             <resource>
@@ -36,26 +57,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.cpswt</groupId>
-            <artifactId>base-events</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.cpswt</groupId>
-            <artifactId>utils</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.cpswt</groupId>
-            <artifactId>config</artifactId>
-            <version>0.5.0-SNAPSHOT</version>
-        </dependency>
-
-    </dependencies>
-
 </project>
