Configure for triple federation Set logging to trace

--- a/cpswt-core/fedmanager-exec/conf/triple/experimentConfig.json
+++ b/cpswt-core/fedmanager-exec/conf/triple/experimentConfig.json
@@ -7,12 +7,6 @@
   "expectedFederates": [
     {
       "federateType": "GatewayMain",
-      "count": 0
-    }
-  ],
-  "lateJoinerFederates": [
-    {
-      "federateType": "GatewayMain",
       "count": 1
     },
     {
@@ -23,5 +17,6 @@
       "federateType": "TripleReceive",
       "count": 1
     }
-  ]
+  ],
+  "lateJoinerFederates": []
 }
