`terminateOnCOAFinish` moved to experiment config

--- a/testfiles/experimentConfig.json
+++ b/testfiles/experimentConfig.json
@@ -27,5 +27,6 @@
   ],
   "pauseTimes": [],
   "coaDefinition": "coaConfig.json",
-  "coaSelection": "coaSelection.json"
+  "coaSelection": "coaSelection.json",
+  "terminateOnCOAFinish": false
 }
