COALoader implementation #77 (UNSTABLE); COA class refactoring
* enums moved to node/edge package
* automated json node load based on type/class
* coa*.json fieldnames refactor
* needs to be done: json* annotations for COA* classes

--- a/testfiles/experimentConfig.json
+++ b/testfiles/experimentConfig.json
@@ -26,7 +26,7 @@
     }
   ],
   "pauseTimes": [],
-  "coaDefinition": "coaConfig.json",
-  "coaSelection": "coaSelection.json",
+  "coaDefinition": "coa/coaConfig.json",
+  "coaSelection": "coa/coaSelection.json",
   "terminateOnCOAFinish": false
 }
