added the Federate Tracing OpenTracing Library Support

--- a/cpswt-core/pom.xml
+++ b/cpswt-core/pom.xml
@@ -29,6 +29,7 @@
         <module>federation-manager</module>
         <module>fedmanager-exec</module>
         <module>fedmanager-host</module>
+        <module>federate-tracer</module>
     </modules>
 
     <dependencies>
