--- a/cpswt-core/federation-manager/pom.xml
+++ b/cpswt-core/federation-manager/pom.xml
@@ -27,6 +27,12 @@
             <version>0.6.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.cpswt</groupId>
+            <artifactId>federate-tracer</artifactId>
+            <version>0.6.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
