Modify ,gitignore and lookAhead to lookahead in federateConfig.default.json

--- a/cpswt-core/federate-base/src/main/resources/federateConfig.default.json
+++ b/cpswt-core/federate-base/src/main/resources/federateConfig.default.json
@@ -3,6 +3,6 @@
   "federateType": "DefaultFederateType",
   "federationId": "DefaultFederationId",
   "isLateJoiner": false,
-  "lookAhead": 0.1,
+  "lookahead": 0.1,
   "stepSize": 1.0
 }
